--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "inlineSourceMap": true
   },
   "include": [
-    "src/main/*.ts",
+    "src/datatypes/*.ts",
+    
     "data/**/*.ts",
     "src/lib.ext.ts",
     "src/matchers.ts",
